@@ -78,7 +78,9 @@
       In <i>openxava/src/main/resources/xava</i> (in <em>OpenXava/xava</em>
       for v6 or older) you have a <a href="https://github.com/openxava/openxava/blob/master/openxava/src/main/resources/xava/default-controllers.xml"><em>default-controllers.xml</em></a>
       that contains a group of generic controllers that can be used in your
-      applications.<br>
+      applications. Moreover, you have a lot of examples in the test
+      application, in <a href="https://github.com/openxava/openxava/blob/master/openxavatest/src/main/resources/xava/controllers.xml"><i>openxavatest/src/main/resources/xava/controllers.xml</i></a>
+      (in <i>OpenXavaTest/xava</i> for v6 or older).<br>
       The <em>controllers.xml</em> file contains an element of type <em>&lt;controllers/&gt;</em>
       with the syntax:<br>
       <style type="text/css"><!--
