@@ -79,7 +79,9 @@
       En <i>openxava/src/main/resources/xava</i> (en <em>OpenXava/xava</em>
       para v6 o anterior) tenemos un <a href="https://github.com/openxava/openxava/blob/master/openxava/src/main/resources/xava/default-controllers.xml"><em>default-controllers.xml</em></a>
       que contiene un grupo de componente de uso genérico que podemos usar en
-      nuestras aplicaciones.<br>
+      nuestras aplicaciones. Además, tienes muchos ejemplos en la aplicación de
+      pruebas, en <a href="https://github.com/openxava/openxava/blob/master/openxavatest/src/main/resources/xava/controllers.xml"><i>openxavatest/src/main/resources/xava/controllers.xml</i></a>
+      (en <i>OpenXavaTest/xava</i> para v6 o anterior).<br>
       El archivo <em>controladores.xml</em> contiene un elemento de tipo <em>&lt;controladores/&gt;</em>
       con la sintaxis:<br>
       <style type="text/css"><!--
